<resources>
    <string name="app_name">COPPA</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="YouMustInputYourUserName">YouMustInputYourUserName</string>
    <string name="UsernameMustBeazAZ09_AndHaveLengthFrom4To64">UsernameMustBeazAZ09_AndHaveLengthFrom4To64</string>
    <string name="YouMustInputYourEmail">YouMustInputYourEmail</string>
    <string name="EmailIsInvalid">EmailIsInvalid</string>
    <string name="YouMustInputPhone">YouMustInputPhone</string>
    <string name="YourPhoneIsInvalid">YourPhoneIsInvalid</string>
    <string name="YouMustInputShipOwner">YouMustInputShipOwner</string>
    <string name="YoutMustInputCaptain">YoutMustInputCaptain</string>
    <string name="YouMustInputFishLicense">YouMustInputFishLicense</string>
    <string name="YouMustInputVesselRegistration">YouMustInputVesselRegistration</string>
    <string name="YouMustInputDuration">YouMustInputDuration</string>
    <string name="RegisterFaild_UnexpectedError">RegisterFaild_UnexpectedError</string>
    <string name="YouMustInputYourPassword">YouMustInputYourPassword</string>
    <string name="title_activity_home">Map</string>
    <string name="AppRequiredAcceptAllPermissionsToMakeActive">AppRequiredAcceptAllPermissionsToMakeActive</string>
    <string name="RequestPermission">RequestPermission</string>
    <string name="LoginFaild_UnexpectedError">LoginFaild_UnexpectedError</string>
    <string name="UnxptectedError">UnxptectedError</string>
    <string name="CanNotGetSpeciesCategory">CanNotGetSpeciesCategory</string>
    <string name="NotFound">NotFound</string>
    <string name="YouMustConnectToInternetToHveFinishAndSyncCurrentTrip">YouMustConnectToInternetToHveFinishAndSyncCurrentTrip</string>
    <string name="LengIsInvalid">LengIsInvalid</string>
    <string name="WeightIsInvalid">WeightIsInvalid</string>
    <string name="YouMustPickAtleast__d__ImageAboutThisSpecies">YouMustPickAtleast__d__ImageAboutThisSpecies</string>
    <string name="PleaseWaitForAFewMinutesSystemIsDetectYourLocationCoordinates">PleaseWaitForAFewMinutesSystemIsDetectYourLocationCoordinates</string>
    <string name="YouMustCorrectAllFiled">YouMustCorrectAllFiled</string>
    <string name="SavingYourCatchedSpecies">SavingYourCatchedSpecies</string>
    <string name="SaveSpeciesSuccessful">SaveSpeciesSuccessful</string>
    <string name="Sync__d__Trip">Sync__d__Trip</string>
    <string name="UpdateYourProfileSuccessful">UpdateYourProfileSuccessful</string>
    <string name="PleaseConnectToInternetBeforeUpdateYourProfile">PleaseConnectToInternetBeforeUpdateYourProfile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="UpdateAvatarFail">UpdateAvatarFail</string>
    <string name="YouMustConnectToInternetForRegister">YouMustConnectToInternetForRegister</string>
    <string name="YouMustConnectToInternetForSignIn">YouMustConnectToInternetForSignIn</string>
    <string name="YouMustFinishCurrentTripToSignOut">YouMustFinishCurrentTripToSignOut</string>
    <string name="PleaseWaitForAllTripSyncedToSignOut">PleaseWaitForAllTripSyncedToSignOut</string>
    <string name="YouMustConnectInternetToSignOut">YouMustConnectInternetToSignOut</string>
    <string name="speciescategory">speciescategory</string>
    <string name="yourinfomation">yourinfomation</string>
    <string name="confirmpassword">confirmpassword</string>
    <string name="species">species</string>
    <string name="imagesofspecies">imagesofspecies</string>
    <string name="press">Press</string>
    <string name="to_add">to_add</string>
    <string name="speciesweight">speciesweight</string>
    <string name="catchedat">catchedat</string>
    <string name="catechedreviews">catechedreviews</string>
    <string name="loading">loading…</string>
    <string name="triphistory">triphistory</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="forgotpassword">ForgotPassword?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="shipowner">ShipOwner</string>
    <string name="captain">Captain</string>
    <string name="fishinglicense">FishingLicense</string>
    <string name="vesselregistration">VesselRegistration</string>
    <string name="duration">Duration</string>
    <string name="yourdefaultpasswordwas__s__">yourdefaultpasswordwas__s__</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="specieslength">Specieslength</string>
    <string name="lo_i_c_xyz">lo_i_c_xyz</string>
    <string name="addspecies">addspecies</string>
    <string name="preview">Preview</string>
    <string name="reviewagain">ReviewAgain</string>
    <string name="finishtrip">FinishTrip</string>
    <string name="tripedhistory">TripedHistory</string>
    <string name="startnewtrip">StartNewTrip</string>
    <string name="controlpanel">ControlPanel</string>
    <string name="YouMustConfirmPassword">YouMustConfirmPassword</string>
    <string name="ConfirmPasswordNotCorrect">ConfirmPasswordNotCorrect</string>
    <string name="YoutMustConnectToInternetForChangeLanguage">YoutMustConnectToInternetForChangeLanguage</string>
    <string name="SystemIsGettingYourLocation">SystemIsGettingYourLocation</string>
    <string name="PreciseLocation">PreciseLocation</string>
    <string name="AllowsAnAppToAccessPreciseLocation">AllowsAnAppToAccessPreciseLocation</string>
    <string name="ApproximateLocation">ApproximateLocation</string>
    <string name="AllowsAnAppToAccessApproximateLocation">AllowsAnAppToAccessApproximateLocation</string>
    <string name="Internet">Internet</string>
    <string name="AllowsApplicationsToOpenNetworkSockets">AllowsApplicationsToOpenNetworkSockets</string>
    <string name="ReadExternalStorage">ReadExternalStorage</string>
    <string name="AllowsAnApplicationToReadFromExternalStorage">AllowsAnApplicationToReadFromExternalStorage</string>
    <string name="Camera">Camera</string>
    <string name="RequiredToBeAbleToAccessTheCameraDevice">RequiredToBeAbleToAccessTheCameraDevice</string>
    <string name="AppIsRunningInBackground">AppIsRunningInBackground</string>
    <string name="HiCaptain__s__">HiCaptain__s__</string>
    <string name="LogingOut">LogingOut</string>
    <string name="PortOfDeparture">PortOfDeparture</string>
    <string name="PortOfReturn">PortOfReturn</string>
    <string name="signout">SignOut</string>
    <string name="syncingwheninternetavailabe">SyncingWhenInternetAvailabe</string>
    <string name="title_activity_maps">Map</string>
    <string name="DoYouReallyWantToDeleteTheRecord_ThisCannotBeUndone">DoYouReallyWantToDeleteTheRecord_ThisCannotBeUndone.</string>
    <string name="DeleteSuccessful">DeleteSuccessful</string>
    <string name="DeleteFail">DeleteFail</string>
    <string name="CachingAppImagesData">CachingAppImagesData</string>
    <string name="country">Country</string>
    <string name="YouMustPickYourCountry">YouMustPickYourCountry</string>
    <string name="note">Note</string>
    <string name="notehint">NoteHint</string>
</resources>