<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/asiScrvSignIn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/asiTvUsername"
            style="@style/Fastdroid.TextView.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/asiUsername"
            style="@style/Fastdroid.Edittext.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:lines="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Fastdroid.TextView.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <TextView
                style="@style/Fastdroid.TextView.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/forgotpassword"
                android:textColor="@color/fastDroidPrimaryColor" />
        </RelativeLayout>

        <EditText
            android:id="@+id/asiPassword"
            style="@style/Fastdroid.Edittext.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1" />

        <Button
            android:id="@+id/asiBtnSignIn"
            style="@style/Fastdroid.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:background="@color/fastDroidLineColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#FFF"
                android:paddingHorizontal="10dp"
                android:text="@string/or"
                android:textColor="@color/fastDroidTextColor" />
        </RelativeLayout>

        <Button
            android:id="@+id/asiBtnSignUp"
            style="@style/Fastdroid.Button.Primary.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register" />
    </LinearLayout>
</ScrollView>