<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30000000"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.species_sync_review.SpeciesSyncReviewActivity">


    <RelativeLayout
        android:id="@+id/rlContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/space_default"
        android:layout_marginVertical="60dp"
        android:background="@drawable/bg_loading_overlay"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/space_default"
        android:paddingVertical="10dp">

        <LinearLayout
            android:id="@+id/gr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp">

                <TextView
                    android:id="@+id/asTvTitle"
                    style="@style/Fastdroid.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:padding="@dimen/space_sm"
                    android:singleLine="true"
                    android:text="@string/catechedreviews" />

                <ImageView
                    android:id="@+id/asIvBackIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_back_black"
                    android:visibility="gone" />
            </RelativeLayout>

            <include layout="@layout/fastdroid_line" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/asRvSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/gr2"
            android:layout_below="@id/gr1"
            android:layout_marginVertical="@dimen/space_sm" />

        <LinearLayout
            android:id="@+id/gr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <include layout="@layout/fastdroid_line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/space_sm"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/asBtnClose"
                    style="@style/Fastdroid.Button.Danger.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:padding="@dimen/space_sm"
                    android:text="@string/close" />

                <Button
                    android:id="@+id/asBtnConfirm"
                    style="@style/Fastdroid.Button.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_sm"
                    android:layout_marginLeft="@dimen/space_sm"
                    android:layout_marginBottom="0dp"
                    android:padding="@dimen/space_sm"
                    android:text="@string/confirm"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>